--- a/nicnbk-ui-angular2/src/app/hf/view/hf.manager-search.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.manager-search.component.html
@@ -99,9 +99,9 @@
 
             <tbody>
 
-            <tr *ngFor = "let manager of foundEntities">
+            <tr *ngFor = "let manager of foundEntities" style="cursor: pointer" (click)="navigate('/hf/managerProfile/', manager.id)">
                 <td width="5%"></td>
-                <td width="30%"><a style="cursor: pointer" (click)="navigate('/hf/managerProfile/', manager.id)">{{manager.name}}</a></td>
+                <td width="30%"><a>{{manager.name}}</a></td>
                 <td width="10%">{{manager.inceptionDate}}</td>
                 <td width="10%">{{manager.updateDate}}</td>
                 <td width="5%">
