--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
@@ -102,9 +102,9 @@
 
             <tbody>
 
-            <tr *ngFor = "let firm of foundEntities">
+            <tr *ngFor = "let firm of foundEntities" style="cursor: pointer" (click)="navigate('/pe/firmProfile/', firm.id)">
                 <td width="5%"></td>
-                <td width="15%"><a style="cursor: pointer" (click)="navigate('/pe/firmProfile/', firm.id)">{{firm.firmName}}</a></td>
+                <td width="15%"><a>{{firm.firmName}}</a></td>
                 <!--<td width="30%">-->
                 <!--&lt;!&ndash;<a [routerLink]="['/hf/managerProfile/', fund.manager.id]">{{fund.manager.name}}</a>&ndash;&gt;-->
                 <!--</td>-->
