Strategy Geography Industry list fix in m2s2 fro PE

--- a/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
@@ -50,19 +50,19 @@
                                         <td class="col-md-3"><b>AUM (mln)</b></td>
                                         <td class="col-md-3">{{memo?.firm?.aum}}</td>
                                         <td class="col-md-3"><b>Strategy:</b></td>
-                                        <td class="col-md-3">{{memo?.firm?.strategy}}</td>
+                                        <td class="col-md-3">{{firmStrategyList.toString()}}</td>
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Inception</b></td>
                                         <td class="col-md-3">{{memo?.firm?.foundedYear}}</td>
                                         <td class="col-md-3"><b>Industry focus:</b></td>
-                                        <td class="col-md-3">{{memo?.firm?.industryFocus}}</td>
+                                        <td class="col-md-3">{{firmIndustryList.toString()}}</td>
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Investment team size:</b></td>
                                         <td class="col-md-3">{{memo?.firm?.invTeamSize}}</td>
                                         <td class="col-md-3"><b>Geography focus:</b></td>
-                                        <td class="col-md-3">{{memo?.firm?.geographyFocus}}</td>
+                                        <td class="col-md-3">{{firmGeographyList.toString()}}</td>
                                     </tr>
                                     <tr>
                                         <td class="col-md-3"><b>Operations team size:</b></td>
@@ -117,9 +117,9 @@
                                             </tr>
                                             <tr>
                                                 <td class="col-md-3"><b>Strategy: </b></td>
-                                                <td class="col-md-3">{{memo?.fund?.strategy}}</td>
+                                                <td class="col-md-3">{{fundStrategyList.toString()}}</td>
                                                 <td class="col-md-3"><b>Geography:</b></td>
-                                                <td class="col-md-3">{{memo?.fund?.geography}}</td>
+                                                <td class="col-md-3">{{fundGeographyList.toString()}}</td>
                                             </tr>
                                         </table>
                                     </div>
