--- a/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
+++ b/nicnbk-ui-angular2/src/app/news/view/news-list.component.html
@@ -57,6 +57,9 @@
                                 <div class="col-md-1">
                                     <a [routerLink]="['/news/edit/', news.id]" class="btn btn-primary btn-sm" *ngIf="canEdit()" >Edit</a>
                                 </div>
+                                <!--<div class="col-md-1 pull-right">-->
+                                    <!--<span class="glyphicon glyphicon-user"></span> {{news.owner}}-->
+                                <!--</div>-->
                             </div>
                             <div class="row">
                                 <hr style="border-top: 1px solid #B5AEAE"/>
@@ -338,6 +341,9 @@
                                 <!--</script>-->
                                 <!--</div>-->
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <!--<div class="pull-left">-->
+                                    <!--<span class="glyphicon glyphicon-user"></span> {{selectedNews.owner}}-->
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
